Validator reports false-positive min/max mismatch on time-series collections with non-default collation

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2026-05-11, Storage Execution 2026-05-25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The validator for time series min max reports a false positive error when a non-default collation is used. For example when a case-insensitive collator is used, the measurements in the bucket will compare as equal despite having byte level differences and should be considered consistent. However, the validator will report a mismatch here

       

       

            Assignee:
            Shin Yee Tan
            Reporter:
            Shin Yee Tan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: