SERVER-125806 Use collator when validating time-series collections with non-default collation (#54031)

GitOrigin-RevId: 19cf361d52d37c642da16b9f8bbb71ee7ca74357